# deck-tracker

./: .gitattributes  .gitignore  card.py  deck.py  decklist_io.py  main.py  matchups.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_deck.py  test_decklist_io.py  test_matchups.py
